--- a/client/src/app/forms2/types/evidence-select/evidence-manager/evidence-manager.component.less
+++ b/client/src/app/forms2/types/evidence-select/evidence-manager/evidence-manager.component.less
@@ -6,7 +6,9 @@ tr.data-row td:first-of-type {
     margin-left: 6px;
   }
 }
-
+.custom-input-dropdown {
+  padding: 8px;
+}
 .prefs-popover {
   ::ng-deep nz-checkbox-group:first-of-type {
     label {
