--- a/client/src/app/forms2/types/evidence-select/evidence-manager/evidence-manager.component.html
+++ b/client/src/app/forms2/types/evidence-select/evidence-manager/evidence-manager.component.html
@@ -28,7 +28,7 @@
             <!-- SELECT HEADER -->
             <th
               *ngIf="col | guardType : colGuards.isSelectCol as opt"
-              [nzShowCheckbox]="opt.checkbox.th.showCheckbox"
+              [nzShowCheckbox]="opt.checkbox.th.showCheckbox || false"
               [nzWidth]="opt.width"
               [nzAlign]="opt.align ?? 'left'"
               [nzLeft]="opt.fixedLeft || false"
@@ -44,7 +44,7 @@
               [nzRight]="opt.fixedRight || false"
               [nzShowSort]="true"
               [nzSortFn]="true"
-              [nzSortOrder]="opt.sortDefault || null">
+              [nzSortOrder]="opt.sort?.default || null">
               {{ opt.label }}
             </th>
 
@@ -108,10 +108,14 @@
               [nzLeft]="opt.fixedLeft || false"
               [nzRight]="opt.fixedRight || false">
               <cvc-table-filter-input
-                [cvcPlaceholder]="opt.inputFilter.placeholder"
-                [cvcModel]="opt.inputFilter.defaultValue"
+                [cvcPlaceholder]="
+                  opt.filter.options[0] && opt.filter.options[0].key
+                "
+                [cvcModel]="
+                  opt.filter.options[0] && opt.filter.options[0].value
+                "
                 (cvcModelChange)="
-                  onCustomFilter$.next({ key: opt.key, value: $event })
+                  onFilterChange$.next({ key: opt.key, value: $event })
                 ">
               </cvc-table-filter-input>
             </th>
@@ -128,7 +132,7 @@
               [nzRight]="opt.fixedRight || false"
               [nzShowSort]="true"
               [nzSortFn]="true"
-              [nzSortOrder]="opt.sortDefault || null"
+              [nzSortOrder]="opt.sort?.default || null"
               [nzShowFilter]="true"
               [nzFilters]="opt.filter.options"
               [nzFilterMultiple]="false"
@@ -148,13 +152,13 @@
               [nzFilterFn]="true">
               <!-- FIXME: Seems excessive to have two subscriptions here, however if structural
                    directives like ngrxLet or ngIf are used on filter-trigger or a containing div,
-                   the trigger and icon aren't rendered until onCustomFilter$ emits.
+                   the trigger and icon aren't rendered until onFilterChange$ emits.
               -->
               <nz-filter-trigger
                 [nzDropdownMenu]="filterMenu"
                 [nzActive]="
-                  (onCustomFilter$ | ngrxPush)?.key === 'description' &&
-                  (onCustomFilter$ | ngrxPush)?.value !== null
+                  (onFilterChange$ | ngrxPush)?.key === 'description' &&
+                  (onFilterChange$ | ngrxPush)?.value !== null
                 ">
                 <span
                   nz-icon
@@ -164,10 +168,14 @@
                 <div class="ant-table-filter-dropdown">
                   <div class="custom-input-dropdown">
                     <cvc-table-filter-input
-                      [cvcPlaceholder]="opt.inputFilter.placeholder"
-                      [cvcModel]="opt.inputFilter.defaultValue"
+                      [cvcPlaceholder]="
+                        opt.filter.options[0] && opt.filter.options[0].key
+                      "
+                      [cvcModel]="
+                        opt.filter.options[0] && opt.filter.options[0].value
+                      "
                       (cvcModelChange)="
-                        onCustomFilter$.next({ key: opt.key, value: $event })
+                        onFilterChange$.next({ key: opt.key, value: $event })
                       ">
                     </cvc-table-filter-input>
                   </div>
@@ -268,7 +276,7 @@
   #columnFilterInput
   let-columnKey
   let-filter="filter">
-  <!-- input updates onCustomFilter -->
+  <!-- input updates onFilterChange -->
   <ng-container
     *ngIf="
       filter.type === undefined || filter.type === 'string';
@@ -283,7 +291,7 @@
         [placeholder]="filter.placeholder"
         [ngModel]="filter.defaultValue"
         (ngModelChange)="
-          onCustomFilter$.next({ key: columnKey, value: $event })
+          onFilterChange$.next({ key: columnKey, value: $event })
         " />
     </nz-input-group>
 
@@ -302,7 +310,7 @@
         nzType="close-circle"
         (click)="
           filterInput.value = '';
-          onCustomFilter$.next({ key: columnKey, value: '' })
+          onFilterChange$.next({ key: columnKey, value: '' })
         "></span>
     </ng-template>
   </ng-container>
@@ -315,7 +323,7 @@
         [ngModel]="filter.defaultValue"
         style="width: 100%"
         (ngModelChange)="
-          onCustomFilter$.next({ key: columnKey, value: $event })
+          onFilterChange$.next({ key: columnKey, value: $event })
         "
         [nzMin]="1"
         [nzStep]="1"></nz-input-number>
@@ -364,7 +372,7 @@
     </nz-col>
     <!-- loading, no more rows, and error tags -->
     <nz-col nzFlex="auto">
-      <ng-container *ngrxLet="requestError$ as errors">
+      <ng-container *ngrxLet="queryError$ as errors">
         <!-- request & network errors -->
         <ng-container *ngIf="errors">
           <nz-tag
