--- a/client/src/app/forms2/types/evidence-select/evidence-manager/evidence-manager.component.less
+++ b/client/src/app/forms2/types/evidence-select/evidence-manager/evidence-manager.component.less
@@ -6,7 +6,7 @@ tr.data-row td:first-of-type {
     margin-left: 6px;
   }
 }
-.custom-input-dropdown {
+.ant-table-filter-dropdown {
   padding: 8px;
 }
 .prefs-popover {
