custom filter trigger's active state working

--- a/client/src/app/forms2/types/evidence-select/evidence-manager/evidence-manager.component.html
+++ b/client/src/app/forms2/types/evidence-select/evidence-manager/evidence-manager.component.html
@@ -138,7 +138,9 @@
               nzCustomFilter
               [nzShowFilter]="opt.filter !== undefined"
               [nzFilterFn]="true">
-              <nz-filter-trigger [nzDropdownMenu]="enumFilterMenu">
+              <nz-filter-trigger
+                [nzDropdownMenu]="enumFilterMenu"
+                [nzActive]="(opt.filter.changes | ngrxPush)?.value !== null">
                 <span
                   nz-icon
                   nzType="filter"
