enum-tag col filter menu close-on-select working

--- a/client/src/app/forms2/types/evidence-select/evidence-manager/enum-filter-menu/enum-filter-menu.component.html
+++ b/client/src/app/forms2/types/evidence-select/evidence-manager/enum-filter-menu/enum-filter-menu.component.html
@@ -11,4 +11,15 @@
     ">
     {{ filter.text }}
   </li>
+  <li style="padding: 3px;">
+    <button
+      nz-button
+      nzType="primary"
+      nzBlock
+      nzSize="small"
+      (click)="cvcOptionChange.next({ key: cvcColumnKey, value: null })"
+      [disabled]="cvcOption?.value === null">
+      Reset
+    </button>
+  </li>
 </ul>
