enum col filter dropdowns show tags w/ icons

--- a/client/src/app/forms2/types/evidence-select/evidence-manager/enum-filter-menu/enum-filter-menu.component.html
+++ b/client/src/app/forms2/types/evidence-select/evidence-manager/enum-filter-menu/enum-filter-menu.component.html
@@ -9,9 +9,10 @@
         value: filter.value
       })
     ">
-    {{ filter.text }}
+    <cvc-attribute-tag
+      [cvcAttrValue]="filter.value"></cvc-attribute-tag>
   </li>
-  <li style="padding: 3px;">
+  <li style="padding: 3px">
     <button
       nz-button
       nzType="primary"
