entity, attribute tags have full-width display option

--- a/client/src/app/forms2/components/attribute-tag/attribute-tag.component.html
+++ b/client/src/app/forms2/components/attribute-tag/attribute-tag.component.html
@@ -1,6 +1,7 @@
 <!-- by default, display tag content within its own nz-tag -->
 <nz-tag
   *ngIf="cvcContext === 'default'"
+  class="default"
   [nzMode]="cvcMode"
   (nzOnClose)="cvcOnClose.next($event)">
   <span
