--- a/client/src/app/forms2/components/attribute-tag/attribute-tag.component.less
+++ b/client/src/app/forms2/components/attribute-tag/attribute-tag.component.less
@@ -1,11 +1,42 @@
 @import 'themes/global-variables.less';
 
 :host {
+  &.full-width {
+    width: 100%;
+    nz-tag {
+      width: 100%;
+    }
+  }
   nz-tag {
     margin-right: 0;
     //   padding-left: 4px;
     //   padding-right: 4px;
     margin-inline-end: 4px;
+  }
+}
+.default {
+  nz-tag {
+    margin: 0;
+    padding: 0 2px 0 0;
+    margin-inline-end: 4px;
+    max-width: 100%;
+    .tag-icon {
+      display: inline-block;
+      padding: 3px 2px 3px 4px;
+      margin: -3px 0 -3px 0;
+    }
+    .tag-label {
+      display: inline-block;
+      margin: 0;
+      padding: 0;
+      margin: -3px 0 -4px 0;
+      padding: 3px 3px 3px 2px;
+      line-height: 1;
+    }
+    ::ng-deep i.ant-tag-close-icon.anticon-close {
+      transition: none;
+      margin-left: 3px;
+    }
   }
 }
 .select-item {
