--- a/client/src/app/forms2/types/evidence-select/evidence-manager/enum-filter-menu/enum-filter-menu.component.html
+++ b/client/src/app/forms2/types/evidence-select/evidence-manager/enum-filter-menu/enum-filter-menu.component.html
@@ -10,6 +10,7 @@
       })
     ">
     <cvc-attribute-tag
+      [cvcFullWidth]="true"
       [cvcAttrValue]="filter.value"></cvc-attribute-tag>
   </li>
   <li style="padding: 3px">
